Fixed bugs on pixlated logo and misaligned dates and location text on mobile

--- a/assets22-v1/assets/css/style.css
+++ b/assets22-v1/assets/css/style.css
@@ -150,7 +150,11 @@
 }
 
 #jumbotron_bottom_text {
+    margin-top: 0.5em;
     margin-bottom: 4em;
+}
+#jumbotron_bottom_text div {
+    margin-bottom: -1em;
 }
 
 /* CALLOUT SECTION ---------------------------------------------------------------------------- */
